--- a/design_pattern/src/main/java/com/example/pattern/strategy(策略)/readme
+++ b/design_pattern/src/main/java/com/example/pattern/strategy(策略)/readme
@@ -39,7 +39,23 @@
 同理：我有钱就坐飞机、没钱就做火车
 
 
-# 结构图
+# 组成
+service接口
+serviceImpl实现 (一般为多种策略...)
+context (上下文：消费者和接口之间通信、以及成员变量等)
 
 
 # 具体代码，请查看Strategy目录
+
+
+# 思考？
+为什么在策略模式中，需要有上下文context的存在呢？
+因为在策略模式中，消费者需要有一些属性或者方法，和接口做交互，
+这样的交互，破坏了类的封装性，同时，此时的调用关系也变成了简单的面向接口编程了
+无法真正的实现：将变化的东西和不变的东西隔离
+
+
+# 优化
+匿名内部类
+工厂方法
+......
